chromeos: Fix crash when clicking on networking menu under mash

The crash occurs because chrome --mash doesn't have a
chromeos::UIProxyConfigService. For classic ash this is usually
created by chrome browser during startup. This object is using in
ash to display a "your connection may be monitored" warning when
using a network proxy. It has dependencies on the user profile
pref service and the local state prefs, so we can't create one
for mash yet.

As a temporary measure, add a check for mash and skip the warning. This
can be fixed properly when the mojo prefs service supports local state.

Also add tests for TrayNetwork. This requires making it optional to
initialize chromeos::NetworkHandler and DBusThreadManager in
mash_unittests.

BUG=717645,718072
TEST=ash_unittests, also chrome --mash doesn't crash when opening
system tray networking menu

Review-Url: https://codereview.chromium.org/2861773003
Cr-Commit-Position: refs/heads/master@{#469202}

Former-commit-id: 0249478f91c38f2c29642c4717eafcdc62e65bfd